--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,15 +9,36 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-
   <servlet>
     <servlet-name>login</servlet-name>
     <servlet-class>Servlets.Login.Login</servlet-class>
   </servlet>
-
   <servlet-mapping>
     <servlet-name>login</servlet-name>
     <url-pattern>/login.do</url-pattern>
-  </servlet-mapping>  
-  
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>findPatients</servlet-name>
+    <servlet-class>Servlets.Patients.Patients</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>findPatients</servlet-name>
+    <url-pattern>/Patients.find</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>addPatients</servlet-name>
+    <servlet-class>Servlets.Patients.Patients</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>addPatients</servlet-name>
+    <url-pattern>/AddPatient.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>deletePatients</servlet-name>
+    <servlet-class>Servlets.Patients.Delete</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>deletePatients</servlet-name>
+    <url-pattern>/DeletePatient.do</url-pattern>
+  </servlet-mapping>
 </web-app>
